--- a/build.yaml
+++ b/build.yaml
@@ -11,11 +11,12 @@
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
+# settings_reset: use when left and right side are switched on different boards
 ---
 include:
   - board: nice_nano_v2
     shield: chocolate_left
   - board: nice_nano_v2
     shield: chocolate_right
-  - board: nice_nano_v2
-    shield: settings_reset
+#  - board: nice_nano_v2
+#    shield: settings_reset
